--- a/projectAI/requirements.txt
+++ b/projectAI/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.1.0
 distlib==0.3.7
 Django==3.2.20
 django-cors-headers==4.0.0
+django-environ==0.4.0
 dj-database-url==2.0.0
 django-password-reset==2.0
 Django-Verify-Email==2.0.3
