--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,256 @@
-﻿asgiref==3.7.1
-beautifulsoup4==4.12.2
-certifi==2023.5.7
-charset-normalizer==3.1.0
-distlib==0.3.7
+aiohttp==3.8.3
+aiosignal==1.3.1
+anyio==3.6.2
+appdirs==1.4.4
+applepassgenerator==0.0.2
+arabic-reshaper==3.0.0
+asgiref==3.6.0
+asn1crypto==1.5.1
+async-generator==1.10
+async-timeout==4.0.2
+asyncio==3.4.3
+asynco==0.0.5
+attrs==22.2.0
+Automat==22.10.0
+Babel==2.9.1
+bcrypt==3.2.0
+beautifulsoup4==4.11.1
+binary==1.0.0
+blinker==1.4
+Brlapi==0.8.4
+CacheControl==0.12.11
+cached-property==1.5.2
+cachetools==5.2.0
+certifi==2022.12.7
+cffi==1.15.1
+chardet==3.0.4
+charset-normalizer==2.1.1
+chromedriver==2.24.1
+chromedriver-binary==113.0.5672.24.0
+click==8.0.3
+colorama==0.4.5
+command-not-found==0.3
+configobj==5.0.8
+constantly==15.1.0
+contourpy==1.0.7
+cryptography==37.0.4
+cssselect==1.2.0
+cssselect2==0.7.0
+cupshelpers==1.0
+cycler==0.11.0
+dbfread==2.0.7
+dbus-python==1.2.18
+decorator==4.4.2
+defer==1.0.6
+defusedxml==0.7.1
+dill==0.3.6
+distro==1.7.0
+distro-info==1.1+ubuntu1
 Django==4.2.1
-django-cors-headers==4.0.0
-django-password-reset==2.0
+django-cors-headers==4.1.0
 Django-Verify-Email==2.0.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
-flatbuffers==23.5.26
+docutils==0.16
+duplicity==0.8.22
+dxlclient==5.6.0.4
+ebaysdk==2.1.5
+et-xmlfile==1.1.0
+evdev==1.6.1
+exceptiongroup==1.1.1
+ezdxf==0.14
+fasteners==0.17.3
+filelock==3.12.0
+firebase-admin==6.0.1
+Flask==2.2.2
+fonttools==4.39.3
+freezegun==0.3.15
+frozenlist==1.3.3
+future==0.18.2
+gevent==21.8.0
+google-api-core==2.11.0
+google-api-python-client==2.70.0
+google-auth==2.15.0
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.2
+google-cloud-firestore==2.7.3
+google-cloud-storage==2.7.0
+google-crc32c==1.5.0
+google-resumable-media==2.4.0
+googleapis-common-protos==1.57.0
+greenlet==1.1.2
+grpcio==1.51.1
+grpcio-status==1.51.1
 gunicorn==21.2.0
-idna==3.4
-libclang==16.0.0
-packaging==23.1
-PyJWT==2.7.0
+gyp==0.1
+h11==0.14.0
+html5lib==1.1
+httpcore==0.16.3
+httplib2==0.20.4
+httpx==0.23.3
+hyperlink==21.0.0
+idna==2.8
+imageio==2.24.0
+importlib-metadata==4.6.4
+incremental==22.10.0
+isodate==0.6.1
+itemadapter==0.8.0
+itemloaders==1.1.0
+itsdangerous==2.1.2
+jeepney==0.8.0
+Jinja2==3.1.2
+jmespath==1.0.1
+keyring==23.8.2
+kiwisolver==1.4.4
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+libsass==0.18.0
+linkedin-api==1.1.0
+linkedin-scraper==2.11.0
+linkedin-scrapper==1.1
+lockfile==0.12.2
+louis==3.22.0
+lxml==4.6.5
+Mako==1.1.3
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+monotonic==1.6
+more-itertools==8.10.0
+msgpack==0.6.2
+multidict==6.0.4
+multiprocess==0.70.14
+netifaces==0.11.0
+networkx==3.0
+num2words==0.5.6
+numpy==1.24.1
+oauthlib==3.2.0
+ofxparse==0.21
+olefile==0.46
+opencv-python==4.7.0.68
+openpyxl==3.1.2
+oscrypto==1.3.0
+outcome==1.2.0
+packaging==23.0
+pandas==2.0.3
+paramiko==2.10.4
+parsel==1.8.1
+passlib==1.7.3
+pdfminer.six==20221105
+pexpect==4.8.0
+Pillow==9.0.1
+ply==3.11
+pocketsphinx==5.0.0
+polib==1.1.0
+Protego==0.2.1
+proto-plus==1.22.1
+protobuf==4.21.12
+psutil==5.6.7
+psycopg2==2.8.6
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.20.1
+pycparser==2.21
+pycups==2.0.1
+PyDispatcher==2.0.7
+pydot==1.4.1
+pydub==0.25.1
+PyGObject==3.42.2
+pyHanko==0.18.1
+pyhanko-certvalidator==0.22.0
+PyJWT==2.6.0
+PyNaCl==1.5.0
+pynput==1.7.6
+pyodbc==4.0.39
+pyOpenSSL==22.0.0
+pyparsing==3.0.7
+pypdf==3.8.1
+PyPDF2==1.26.0
+PyQRCode==1.2.1
+pyserial==3.4
+PySocks==1.6.8
+pyTelegramBotAPI==4.9.0
+python-apt==2.4.0+22.10
+python-bidi==0.4.2
+python-dateutil==2.8.2
+python-debian==0.1.46
+python-dotenv==1.0.0
+python-ldap==3.4.0
+python-stdnum==1.13
+python-telegram==0.16.0
+python-telegram-bot==20.0
+python-xlib==0.33
 pytz==2023.3
-requests==2.31.0
-soupsieve==2.4.1
+pytz-deprecation-shim==0.1.0.post0
+pyusb==1.0.2
+PyWavelets==1.4.1
+pyxdg==0.27
+PyYAML==5.4.1
+qrcode==6.1
+queuelib==1.6.2
+reportlab==3.5.59
+requests==2.28.2
+requests-file==1.5.1
+requests-toolbelt==0.10.1
+restructuredtext-lint==1.4.0
+rfc3986==1.5.0
+rsa==4.9
+scikit-image==0.19.3
+scipy==1.10.0
+Scrapy==2.8.0
+SecretStorage==3.3.3
+selenium==4.9.0
+service-identity==21.1.0
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+sounddevice==0.4.5
+soupsieve==2.3.2.post1
+SpeechRecognition==3.9.0
 sqlparse==0.4.4
+subprocess.run==0.0.8
+svglib==1.5.1
+systemd-python==235
+telebot==0.0.4
+telegram==0.0.1
+telegram.py==0.3.1
+tifffile==2022.10.10
+tinycss2==1.2.1
+tldextract==3.4.0
+tqdm==4.65.0
+trio==0.22.0
+trio-websocket==0.10.2
+Twisted==22.10.0
+typing_extensions==4.5.0
 tzdata==2023.3
-urllib3==2.0.2
-virtualenv-clone==0.5.7
-wrapt==1.14.1
-whitenoise==6.4.0
+tzlocal==4.3
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+unattended-upgrades==0.1
+uritemplate==4.1.1
+uritools==4.0.1
+urllib3==1.26.5
+usb-creator==0.3.7
+vobject==0.9.6.1
+w3lib==2.1.1
+wadllib==1.3.6
+Wave==0.0.2
+webdriver-manager==3.8.6
+webencodings==0.5.1
+Werkzeug==0.16.1
+wsproto==1.2.0
+xdg==5
+xhtml2pdf==0.2.10
+xkit==0.0.0
+xlrd==1.2.0
+XlsxWriter==1.1.2
+xlwt==1.3.0
+yarl==1.8.2
+zeep==3.4.0
+zipp==1.0.0
+zope.event==4.6
+zope.interface==5.5.2
